# todo_cli_app

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: handoff.md
.github/workflows/: ci.yml
docs/: code-map.md  product-context.md  project-status.md  team-directives.md  tech-debt.md  todo-cli-MVP-PRD.docx  todo-cli-MVP-PRD.md
docs/adrs/: 0003-tech-stack.md
docs/plans/: quickstart-backlog.md
docs/sprints/: sprint-m6-plan.md
docs/tracking/: 2026-04-16-todo-cli-discovery.md
src/todo_cli/: __init__.py  cli.py  exceptions.py  factory.py  models.py  service.py
src/todo_cli/commands/: __init__.py  tasks.py
src/todo_cli/storage/: __init__.py  base.py  json_store.py
tests/: __init__.py  test_cli.py  test_factory.py  test_service.py  test_storage.py
