[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.0"
description = "A Python CLI task scheduling app for terminal-native users"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.scripts]
todo = "todo_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
