[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.0"
description = "A Python CLI task scheduling app for terminal-native users"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
todo = "todo_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[tool.pytest.ini_options]
# Coverage gate (M5): fail the suite if total coverage drops below 80%.
# Centralized here so both local `uv run pytest` and CI enforce one threshold.
addopts = "--cov=todo_cli --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
