[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.0"
description = "A Python CLI task scheduling app for terminal-native users"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "akshita412", email = "akshita.srivastava@gmail.com" },
]
keywords = ["todo", "cli", "task", "productivity", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/akshita412/todo_cli_app"
Repository = "https://github.com/akshita412/todo_cli_app"
Issues = "https://github.com/akshita412/todo_cli_app/issues"

[project.scripts]
todo = "todo_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[tool.pytest.ini_options]
# Coverage gate (M5): fail the suite if total coverage drops below 95%.
# Centralized here so both local `uv run pytest` and CI enforce one threshold.
addopts = "--cov=todo_cli --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
